# internet_monitoring

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  speed_test.py  visualize_data.ipynb
app/: README.md  migrations.py  speed_test.py
dump/: dump.json.json
